--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -119,6 +119,13 @@ border-radius: 20rpx;
   background-color:whitesmoke;
 }
 
+.announcement-image {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-top: 10rpx;
+}
+
 .task-list-item {
   width: 90%;
   margin-left: 5%;
@@ -283,54 +290,52 @@ border-radius: 20rpx;
 }
 
 
-.qr-list {
-    width: 90%;
-    margin-left: 5%;
-    margin-top: 40rpx;
-    background-color: #f6f6f6;
-    display: flex;
-    justify-content: space-between;
-    border-radius: 20rpx;
-  }
 
-  .qr-box {
-      width: 80%;
-      text-align: center;
-  }
-  
-  
-  .qr-text {
-      
-    font-size: 32rpx;
-    font-weight: 600;
-    color: black;
-    text-align: center;
-    flex-basis: 100%;
-    padding: 20rpx;
-  }
-  
-  
-  .qr-item {
-    margin-top: 40rpx;
-    margin-bottom: 40rpx;
-    align-items: center;
-    flex-basis: 100%;
-    padding: 20rpx;
-  }
-  
-  .qr-image {
-    width: 90%;
-  }
-  .qr-title {
-      display: flex;
-      justify-content: center;
-    font-weight: 64rpx;
-    /* margin-left: 5%; */
-    margin-top: 50rpx;
-    font-weight: 600;
-    color: black;
-    text-align: center;
-  }
+
+/* 公告弹窗样式 */
+.announcement-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 40rpx;
+  border-radius: 16rpx;
+  width: 80%;
+  max-height: 80%;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-title {
+  font-size: 36rpx;
+  font-weight: bold;
+  margin-bottom: 20rpx;
+  text-align: center;
+}
+
+.modal-body {
+  flex-grow: 1;
+  margin-bottom: 20rpx;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: space-around;
+}
+
+.modal-footer button {
+  width: 45%;
+}
   
 
 @media (prefers-color-scheme: dark) {
