--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -314,6 +314,7 @@ border-radius: 20rpx;
   max-height: 80%;
   display: flex;
   flex-direction: column;
+  white-space: pre-wrap;
 }
 
 .modal-title {
